Fixed footer overlap with sidebar

--- a/css/main.css
+++ b/css/main.css
@@ -194,6 +194,7 @@ li { list-style-position: inside; }
   position: relative;
   bottom: 30px;
   max-width: 390px;
+  clear: both;
 }
 
 .page-title {
